--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<div class="flexbox">
+		<div class="green box">3</div>
+		<div class="red box">1</div>
+		<div class="blue box">2</div>
+	</div>
+	<div class="flexwrap">
+		<div class="green box">3</div>
+		<div class="green box">4</div>
+		<div class="green box">5</div>
+		<div class="green box">6</div>
+		<div class="green box">7</div>
+		<div class="red box">1</div>
+		<div class="blue box">2</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
