--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 		<div class="red box">1</div>
 		<div class="blue box">2</div>
 	</div>
-	<div class="flexwrap">
-		<div class="green box">3</div>
-		<div class="green box">4</div>
+	<div class="holder">
+		<div class="green box item">3</div>
+		<div class="green box item">4</div>
 		<div class="green box">5</div>
 		<div class="green box">6</div>
 		<div class="green box">7</div>
